Reintroduxed flexbox to the theme, although this time with a little tweaking and a newer modernizr implementation.

--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -3,6 +3,7 @@
 
 // Modules.
 @import "modules/flexbox.less";
+@import "modules/border-radius.less";
 
 // Frameworks.
 @import "partials/custom-bootstrap.less";
