--- a/src/status-page.liquid
+++ b/src/status-page.liquid
@@ -39,8 +39,8 @@
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
-            <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-            <script src="//oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+            <script src="{{ 'html5shiv-3-7-0.min.js' | asset_url }}"></script>
+            <script src="{{ 'respond-1-3-0.min.js' | asset_url }}"></script>
         <![endif]-->
 
         <!-- Include CSS Assets. -->
