--- a/src/stylesheets/main.less
+++ b/src/stylesheets/main.less
@@ -1,5 +1,5 @@
 // Fonts.
-@import url('//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800');
+@import "partials/opensans.less";
 
 // Modules.
 @import "modules/flexbox.less";
