Added minification for our new JS assets.

--- a/src/status-page.liquid
+++ b/src/status-page.liquid
@@ -144,8 +144,6 @@
         {% endif %}
 
         <!-- Javascript Assets. -->
-        <script src="{{ 'jquery-1.11.1.min.js' | asset_url }}"></script>
-        <script src="{{ 'moment.js' | asset_url }}"></script>
-        <script src="{{ 'status-page.js' | asset_url }}"></script>
+        <script src="{{ 'status-page.min.js' | asset_url }}"></script>
     </body>
 </html>
