Improved type.less file in order to comply with other standards

--- a/src/stylesheets/partials/type.less
+++ b/src/stylesheets/partials/type.less
@@ -71,6 +71,13 @@ dl {
 	opacity:0.75;
 }
 
-dt.text-muted {
-	width: 235px;
+@media (min-width: @grid-float-breakpoint) {
+  .dl-horizontal {
+    dt {
+      width: 235px;
+    }
+    dd {
+      margin-left: 255px;
+    }
+  }
 }
